# devopsdaysgal-cli

./: .gitignore  README.rst  requirements.in  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
devopsdaysgal_cli/: main.py  parsers.py
devopsdaysgal_cli/cli/: __init__.py  create_tasks.py  generate_agenda.py  make_tickets.py
