[metadata]
name = devopsdaysgal-cli
author = Darragh Bailey
author-email = daragh.bailey@gmail.com
home-page = https://github.com/devopsdaysgal/devopsdaysgal-cli
summary = simple tool to help with various Devopsdays Galway event operations
#description-file = DESCRIPTION
license = Apache License (2.0)
keywords = devopsdays devopsdaysgal
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Devopsdays
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[files]
packages =
    devopsdaysgal_cli

[wheel]
universal = 1

[entry_points]
console_scripts =
    devopsdaysgal-cli = devopsdaysgal_cli.main:main
devopsdaysgal.cli.subcommands =
    generate_agenda=devopsdaysgal_cli.cli.generate_agenda:Command
    make_tickets=devopsdaysgal_cli.cli.make_tickets:Command

[easy_install]
